--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # Backend API Configuration
-VITE_API_URL=http://localhost:8000/api
+VITE_API_URL=https://formulaire-intelligent-1.onrender.com/api
 
 # Note: The frontend now connects to the FastAPI backend
 # Make sure the backend is running on http://localhost:8000
