--- a/.env
+++ b/.env
@@ -1,6 +1,10 @@
 # Backend API Configuration
 VITE_API_URL=https://formulaire-intelligent-1.onrender.com/api
 
+# Google reCAPTCHA v2 Site Key
+# Get your keys from: https://www.google.com/recaptcha/admin
+VITE_RECAPTCHA_SITE_KEY=6Lf8tiEsAAAAAKoY1OkAOcyhfniIdkvgkdH1is__
+
 # Note: The frontend now connects to the FastAPI backend
 # Make sure the backend is running on http://localhost:8000
 
